--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,9 @@
     <string name="retry_button">Retry?</string>
     <string name="score">SCORE</string>
     <string name="time">TIME</string>
+    <string name="title_activity_how_to_play">HowToPlay</string>
+    <string name="rule1"><b>• 8 correct guesses:</b> Time decreased to 4s</string>
+    <string name="rule2"><b>• 16 correct guesses:</b> Time decreased to 2s</string>
+    <string name="rule3"><b>• 24 correct guesses:</b> One color will appear black, meaning you should select that one if the color that appears in the center is missing</string>
 
 </resources>
